[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-core"
version = "0.1.0"
description = "Core libraries for the accelerator metadata backbone"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
keywords = ["metadata", "data-processing", "accelerator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [

]

[project.urls]
Homepage = "https://github.com/yourusername/accelerator-core"
Documentation = "https://github.com/yourusername/accelerator-core/wiki"
Repository = "https://github.com/yourusername/accelerator-core"

[tool.setuptools.packages.find]
where = ["accelerator_core"]

[black]
include = "accelerator_core"
